--- a/src/app/components/universidade/universidade-list/universidade-list.component.html
+++ b/src/app/components/universidade/universidade-list/universidade-list.component.html
@@ -54,6 +54,10 @@
                                 class="btn btn-sm btn-primary me-1">
                                 <i class="bi bi-pencil"></i> Editar
                             </a>
+                            <button (click)="excluirUniversidade(universidade)" class="btn btn-sm btn-danger">
+                                <i class="bi bi-trash"></i> Excluir
+                            </button>
+
                         </td>
                     </tr>
                 </tbody>
